--- a/templates/partials/headTags.hbs
+++ b/templates/partials/headTags.hbs
@@ -26,6 +26,8 @@ https://templatemo.com/tm-570-chain-app-dev
   <link rel="stylesheet" href="./assets/css/animated.css">
   <link rel="stylesheet" href="./assets/css/owl.css">
 
+<link rel="stylesheet" href="./assets/css/myStyle.css">
+
 
 
 
